# Visual-Target-Tracking-for-UAVs-Using-DRL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/airsim/: settings.json
configs/drl/: ppo_depth.yaml  sac_depth.yaml  sac_rgb.yaml
docs/: airsim_setup_guide.md  setup_guide.md
scripts/: bootstrap_vastai.sh  evaluate.py  launch_airsim_fleet.sh  r2_stop.sh  restart_airsim.sh  run_baseline.py  run_trained.py  train.py  train_ppo.py
src/vtt/: constants.py
src/vtt/callbacks/: __init__.py  image_monitor.py  r2_sync.py
src/vtt/control/: p_controller.py
src/vtt/envs/: tracking_env.py
src/vtt/metrics/: __init__.py  constants.py  scripted_trajectories.py  tracker_metrics.py  trajectory_comparison.py
src/vtt/models/: asymmetric_policy.py  asymmetric_ppo_policy.py  feature_extractors.py
src/vtt/utils/: camera_helpers.py  common_utils.py
