[project]
name = "vtt-uav"
version = "0.1.0"
description = "Visual Target Tracking for UAVs Using Deep Reinforcement Learning"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airsim",
    "gymnasium",
    "stable-baselines3>=2.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pynput>=1.7",
    "pyyaml>=6.0",
    "wandb>=0.15",
]


[[tool.poetry.packages]]
include = "vtt"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
